fixed spacing on about page.

--- a/src/components/About/_About.scss
+++ b/src/components/About/_About.scss
@@ -7,11 +7,10 @@
         .grid{
             display: grid;
             grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(2, minmax(80px, auto));
+            grid-template-rows: repeat(2,  auto);
             justify-content: center;
             align-items: center;
-            grid-row-gap: 20px;
-            padding: 20px;
+            grid-row-gap: 10px;
             .sectionTitle{
                 grid-row:1;
                 grid-column-start: 1;
@@ -26,6 +25,7 @@
                     opacity: 0;
                 }
                 h1{
+                    margin-top: 20px;
                     transform: translateX(-100vw);
                     opacity: 0;
                 }
