--- a/src/components/Profile/_Profile.scss
+++ b/src/components/Profile/_Profile.scss
@@ -14,6 +14,7 @@
             border-radius: 50%;
             width: 300px;
             transform: scale(0);
+            margin: 10px;
             box-shadow: 5px 5px 8px #888888,
                         -5px -5px 8px #888888,
                         5px -5px 8px #888888, 
