--- a/src/components/Talents/_Talents.scss
+++ b/src/components/Talents/_Talents.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    padding: 10px;
+    // padding: 10px;
     // opacity: 0;
     
     div{
